--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,8 @@
+@import "styles/font";
+@import "styles/colors";
+
 body {
+  background-color: #F0F8FF;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +14,23 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.loading {
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+
+  &__icon {
+    fill: $COLOR_BLACK_YELLOW;
+  }
+}
+
+.error {
+  align-items: center;
+  color: $COLOR_RED;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
 }
