--- a/src/views/Main/Main.scss
+++ b/src/views/Main/Main.scss
@@ -11,6 +11,6 @@
     display: grid;
     grid-gap: 3vw;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    padding: 50px 100px;
+    padding: 50px;
   }
 }
